# xss-demo

./: .pre-commit-config.yaml  README.md  config.py  pyproject.toml
data/: demo.db
xss-demo/: crud.py  db.py  main.py
xss_demo/: auth.py  config.py  crud.py  db.py  main.py  models.py
